--- a/Hana_FE/src/public/notification/notification-list.html
+++ b/Hana_FE/src/public/notification/notification-list.html
@@ -1,103 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
 
-<head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
+        <title>Hana Taekwondo - Notification List</title>
 
-	<title>Hana Taekwondo - Notification List</title>
+        <!-- Custom fonts for this template -->
+        <link
+            href="../../vendor/fontawesome-free/css/all.min.css"
+            rel="stylesheet"
+            type="text/css"
+        />
+        <link
+            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet"
+        />
 
-	<!-- Custom fonts for this template -->
-	<link href="../../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
-	<link
-		href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-		rel="stylesheet" />
+        <!-- Custom styles for this template -->
+        <link href="../../css/sb-admin-2.min.css" rel="stylesheet" />
 
-	<!-- Custom styles for this template -->
-	<link href="../../css/sb-admin-2.min.css" rel="stylesheet" />
+        <!-- Custom styles for this page -->
+        <link
+            href="../../vendor/datatables/dataTables.bootstrap4.min.css"
+            rel="stylesheet"
+        />
+        <link
+            href="../../vendor/toaster/jquery.toast.min.css"
+            rel="stylesheet"
+        />
+    </head>
 
-	<!-- Custom styles for this page -->
-	<link href="../../vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet" />
-	<link href="../../vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
-</head>
+    <body id="page-top">
+        <!-- Page Wrapper -->
+        <div id="wrapper">
+            <!-- Sidebar -->
+            <sidebar-component></sidebar-component>
+            <!-- End of Sidebar -->
 
-<body id="page-top">
-	<!-- Page Wrapper -->
-	<div id="wrapper">
-		<!-- Sidebar -->
-		<sidebar-component></sidebar-component>
-		<!-- End of Sidebar -->
+            <!-- Content Wrapper -->
+            <div id="content-wrapper" class="d-flex flex-column">
+                <!-- Main Content -->
+                <div id="content">
+                    <!-- Topbar -->
+                    <topbar-component></topbar-component>
+                    <!-- End of Topbar -->
 
-		<!-- Content Wrapper -->
-		<div id="content-wrapper" class="d-flex flex-column">
-			<!-- Main Content -->
-			<div id="content">
-				<!-- Topbar -->
-				<topbar-component></topbar-component>
-				<!-- End of Topbar -->
+                    <!-- Begin Page Content -->
+                    <div class="container-fluid">
+                        <div class="loading-div">
+                            <img src="../../img/Rolling-1s-200px.gif" />
+                        </div>
+                        <!-- Page Heading -->
+                        <h1 class="h3 mb-2 text-gray-800">Notification</h1>
 
-				<!-- Begin Page Content -->
-				<div class="container-fluid">
-					<div class="loading-div">
-						<img src="../../img/Rolling-1s-200px.gif" />
-					</div>
-					<!-- Page Heading -->
-					<h1 class="h3 mb-2 text-gray-800">Notification</h1>
+                        <!-- DataTales Example -->
+                        <div class="card shadow mb-4">
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table
+                                        class="table table-bordered"
+                                        id="dataTable"
+                                        width="100%"
+                                        cellspacing="0"
+                                    >
+                                        <tbody
+                                            id="notificationTableBody"
+                                            style="cursor: pointer"
+                                        ></tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.container-fluid -->
+                </div>
+                <!-- End of Main Content -->
 
-					<!-- DataTales Example -->
-					<div class="card shadow mb-4">
-						<div class="card-body">
-							<div class="table-responsive">
-								<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-									<tbody id="notificationTableBody" style="cursor: pointer;">
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /.container-fluid -->
-			</div>
-			<!-- End of Main Content -->
+                <!-- Footer -->
+                <footer-component></footer-component>
+                <!-- End of Footer -->
+            </div>
+            <!-- End of Content Wrapper -->
+        </div>
+        <!-- End of Page Wrapper -->
 
-			<!-- Footer -->
-			<footer-component></footer-component>
-			<!-- End of Footer -->
-		</div>
-		<!-- End of Content Wrapper -->
-	</div>
-	<!-- End of Page Wrapper -->
+        <!-- Scroll to Top Button-->
+        <a class="scroll-to-top rounded" href="#page-top">
+            <i class="fas fa-angle-up"></i>
+        </a>
 
-	<!-- Scroll to Top Button-->
-	<a class="scroll-to-top rounded" href="#page-top">
-		<i class="fas fa-angle-up"></i>
-	</a>
+        <!-- Bootstrap core JavaScript-->
+        <script src="../../vendor/jquery/jquery.min.js"></script>
+        <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-	<!-- Bootstrap core JavaScript-->
-	<script src="../../vendor/jquery/jquery.min.js"></script>
-	<script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <!-- Core plugin JavaScript-->
+        <script src="../../vendor/jquery-easing/jquery.easing.min.js"></script>
 
-	<!-- Core plugin JavaScript-->
-	<script src="../../vendor/jquery-easing/jquery.easing.min.js"></script>
+        <!-- Custom scripts for all pages-->
+        <script src="../../js/sb-admin-2.min.js"></script>
 
-	<!-- Custom scripts for all pages-->
-	<script src="../../js/sb-admin-2.min.js"></script>
+        <!-- Page level plugins -->
+        <script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
+        <script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
+        <script src="../../js/jwt-decode.js"></script>
+        <script src="../../vendor/toaster/jquery.toast.min.js"></script>
+        <script src="../../js/constants.js"></script>
+        <script src="../../js/components/sidebar.js"></script>
+        <script src="../../js/components/topbar.js"></script>
+        <script src="../../js/components/footer.js"></script>
 
-	<!-- Page level plugins -->
-	<script src="../../vendor/datatables/jquery.dataTables.min.js"></script>
-	<script src="../../vendor/datatables/dataTables.bootstrap4.min.js"></script>
-	<script src="../../js/jwt-decode.js"></script>
-	<script src="../../vendor/toaster/jquery.toast.min.js"></script>
-	<script src="../../js/components/sidebar.js"></script>
-	<script src="../../js/components/topbar.js"></script>
-	<script src="../../js/components/footer.js"></script>
-	<script src="../../js/constants.js"></script>
-
-	<script src="../../js/notification-list.js"></script>
-</body>
-
+        <script src="../../js/notification-list.js"></script>
+    </body>
 </html>
