--- a/Hana_FE/src/public/spending/spending-management.html
+++ b/Hana_FE/src/public/spending/spending-management.html
@@ -31,10 +31,7 @@
 			href="../../vendor/datatables/dataTables.bootstrap4.min.css"
 			rel="stylesheet"
 		/>
-		<link
-			href="../../vendor/toaster/jquery.toast.min.css"
-			rel="stylesheet"
-		/>
+		<link href="../../vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
 	</head>
 
 	<body id="page-top">
@@ -90,9 +87,11 @@
 												<th>Electric</th>
 												<th>Water</th>
 												<th>Rent</th>
+												<th>Salary</th>
+												<th>Eating</th>
 												<th>Another</th>
 												<th>Paid Date</th>
-												<th>Note</th>
+												<th>Content</th>
 												<th></th>
 											</tr>
 										</thead>
@@ -113,10 +112,7 @@
 							<div class="modal-dialog" role="document">
 								<div class="modal-content">
 									<div class="modal-header">
-										<h5
-											class="modal-title"
-											id="exampleModalLabel"
-										>
+										<h5 class="modal-title" id="exampleModalLabel">
 											Add New Spending
 										</h5>
 										<button
@@ -131,13 +127,9 @@
 									<div class="modal-body">
 										<form>
 											<div class="form-group">
-												<label
-													for="electric"
-													class="col-form-label"
+												<label for="electric" class="col-form-label"
 													>Electric
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="number"
@@ -148,13 +140,9 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="water"
-													class="col-form-label"
+												<label for="water" class="col-form-label"
 													>Water
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="number"
@@ -165,13 +153,9 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="rent"
-													class="col-form-label"
+												<label for="rent" class="col-form-label"
 													>Rent
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="number"
@@ -182,13 +166,9 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="another"
-													class="col-form-label"
+												<label for="another" class="col-form-label"
 													>Another
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="number"
@@ -199,13 +179,9 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="paid-date"
-													class="col-form-label"
+												<label for="paid-date" class="col-form-label"
 													>Paid Date
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="date"
@@ -215,9 +191,7 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="note-text"
-													class="col-form-label"
+												<label for="note-text" class="col-form-label"
 													>Note</label
 												>
 												<textarea
@@ -236,11 +210,7 @@
 										>
 											Cancel
 										</button>
-										<a
-											id="add-spending-btn"
-											class="btn btn-primary"
-											href="#"
-										>
+										<a id="add-spending-btn" class="btn btn-primary" href="#">
 											Add
 										</a>
 									</div>
@@ -260,10 +230,7 @@
 							<div class="modal-dialog" role="document">
 								<div class="modal-content">
 									<div class="modal-header">
-										<h5
-											class="modal-title"
-											id="exampleModalLabel"
-										>
+										<h5 class="modal-title" id="exampleModalLabel">
 											Spending Information
 										</h5>
 										<button
@@ -277,18 +244,11 @@
 									</div>
 									<div class="modal-body">
 										<form>
-											<input
-												type="hidden"
-												id="spendingId"
-											/>
+											<input type="hidden" id="spendingId" />
 											<div class="form-group">
-												<label
-													for="electric-update"
-													class="col-form-label"
+												<label for="electric-update" class="col-form-label"
 													>Electric
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="number"
@@ -299,13 +259,9 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="water-update"
-													class="col-form-label"
+												<label for="water-update" class="col-form-label"
 													>Water
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="number"
@@ -316,13 +272,9 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="rent-update"
-													class="col-form-label"
+												<label for="rent-update" class="col-form-label"
 													>Rent
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="number"
@@ -333,13 +285,9 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="another-update"
-													class="col-form-label"
+												<label for="another-update" class="col-form-label"
 													>Another
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="number"
@@ -350,13 +298,9 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="paid-date-update"
-													class="col-form-label"
+												<label for="paid-date-update" class="col-form-label"
 													>Paid Date
-													<span style="color: red"
-														>(*)</span
-													>
+													<span style="color: red">(*)</span>
 												</label>
 												<input
 													type="date"
@@ -366,9 +310,7 @@
 												/>
 											</div>
 											<div class="form-group">
-												<label
-													for="note-text-update"
-													class="col-form-label"
+												<label for="note-text-update" class="col-form-label"
 													>Note</label
 												>
 												<textarea
@@ -387,10 +329,7 @@
 										>
 											Cancel
 										</button>
-										<a
-											id="update-spending-btn"
-											class="btn btn-primary"
-											href="#"
+										<a id="update-spending-btn" class="btn btn-primary" href="#"
 											>Save Changes</a
 										>
 									</div>
