--- a/Hana_FE/src/public/student/add-student.html
+++ b/Hana_FE/src/public/student/add-student.html
@@ -77,7 +77,7 @@
 									</h6>
 								</div>
 								<div class="card-body">
-									<form>
+									<form enctype="multipart/form-data">
 										<span style="color: red"
 											>(*): The field needs to be filled out</span
 										>
