--- a/Hana_FE/src/public/spending/spending-management.html
+++ b/Hana_FE/src/public/spending/spending-management.html
@@ -166,6 +166,32 @@
 												/>
 											</div>
 											<div class="form-group">
+												<label for="salary" class="col-form-label"
+													>Salary
+													<span style="color: red">(*)</span>
+												</label>
+												<input
+													type="number"
+													class="form-control"
+													id="salary"
+													placeholder="Enter Salary spending"
+													required
+												/>
+											</div>
+											<div class="form-group">
+												<label for="Eating" class="col-form-label"
+													>Eating
+													<span style="color: red">(*)</span>
+												</label>
+												<input
+													type="number"
+													class="form-control"
+													id="eating"
+													placeholder="Enter Eating spending"
+													required
+												/>
+											</div>
+											<div class="form-group">
 												<label for="another" class="col-form-label"
 													>Another
 													<span style="color: red">(*)</span>
@@ -192,7 +218,7 @@
 											</div>
 											<div class="form-group">
 												<label for="note-text" class="col-form-label"
-													>Note</label
+													>Content</label
 												>
 												<textarea
 													type="number"
@@ -285,6 +311,32 @@
 												/>
 											</div>
 											<div class="form-group">
+												<label for="salary-update" class="col-form-label"
+													>Salary
+													<span style="color: red">(*)</span>
+												</label>
+												<input
+													type="number"
+													class="form-control"
+													id="salary-update"
+													placeholder="Enter Salary spending"
+													required
+												/>
+											</div>
+											<div class="form-group">
+												<label for="eating-update" class="col-form-label"
+													>Eating
+													<span style="color: red">(*)</span>
+												</label>
+												<input
+													type="number"
+													class="form-control"
+													id="eating-update"
+													placeholder="Enter Eating spending"
+													required
+												/>
+											</div>
+											<div class="form-group">
 												<label for="another-update" class="col-form-label"
 													>Another
 													<span style="color: red">(*)</span>
@@ -311,7 +363,7 @@
 											</div>
 											<div class="form-group">
 												<label for="note-text-update" class="col-form-label"
-													>Note</label
+													>Content</label
 												>
 												<textarea
 													type="number"
