--- a/Hana_FE/src/public/student/student-list.html
+++ b/Hana_FE/src/public/student/student-list.html
@@ -31,10 +31,7 @@
 			href="../../vendor/datatables/dataTables.bootstrap4.min.css"
 			rel="stylesheet"
 		/>
-		<link
-			href="../../vendor/toaster/jquery.toast.min.css"
-			rel="stylesheet"
-		/>
+		<link href="../../vendor/toaster/jquery.toast.min.css" rel="stylesheet" />
 	</head>
 
 	<body id="page-top">
@@ -91,6 +88,7 @@
 												<th>Gender</th>
 												<th>Parent</th>
 												<th>Phone Number</th>
+												<th>Total Tuitions</th>
 												<th></th>
 											</tr>
 										</thead>
