--- a/Hana_FE/src/public/index.html
+++ b/Hana_FE/src/public/index.html
@@ -205,6 +205,20 @@
 												Rent
 											</span>
 											<span class="mr-2">
+												<i
+													class="fas fa-circle text-info"
+													style="color: #83c5be !important"
+												></i>
+												Salary
+											</span>
+											<span class="mr-2">
+												<i
+													class="fas fa-circle text-info"
+													style="color: #7209b7 !important"
+												></i>
+												Eating
+											</span>
+											<span class="mr-2">
 												<i class="fas fa-circle text-secondary"></i>
 												Another
 											</span>
