--- a/Hana_FE/src/public/spending/spending-management.html
+++ b/Hana_FE/src/public/spending/spending-management.html
@@ -72,6 +72,17 @@
 									</span>
 									<span class="text">Add New Spending</span>
 								</a>
+								<a
+									id="export-excel"
+									href="#"
+									class="btn btn-icon-split"
+									style="background-color: green; color: white"
+								>
+									<span class="icon text-white-50">
+										<i class="fas fa-file-export"></i>
+									</span>
+									<span class="text">Export to Excel</span>
+								</a>
 							</div>
 							<div class="card-body">
 								<div class="table-responsive">
