--- a/Hana_FE/src/public/attendance/student-attendance.html
+++ b/Hana_FE/src/public/attendance/student-attendance.html
@@ -57,37 +57,92 @@
                         <!-- <div class="loading-div">
 							<img src="../../img/Rolling-1s-200px.gif" />
 						</div> -->
-
+                        <div class="card shadow mb-4">
+                            <div class="card-body">
+                                <div class="card-header py-3 class-info-grid">
+                                    <div class="grid-item">
+                                        <h1 class="h3 mb-2 text-gray-800">
+                                            Class Information
+                                        </h1>
+                                    </div>
+                                    <div class="grid-item">
+                                        <h6 class="text-gray-900">
+                                            Class Name:
+                                        </h6>
+                                        <p
+                                            id="class-name"
+                                            class="text-gray-900"
+                                        ></p>
+                                    </div>
+                                    <div class="grid-item">
+                                        <h6 class="text-gray-900">
+                                            Class Description:
+                                        </h6>
+                                        <p
+                                            id="class-description"
+                                            class="text-gray-900"
+                                        ></p>
+                                    </div>
+                                    <div class="grid-item">
+                                        <h6 class="text-gray-900">
+                                            Start Date:
+                                        </h6>
+                                        <p
+                                            id="start-date"
+                                            class="text-gray-900"
+                                        ></p>
+                                    </div>
+                                    <div class="grid-item">
+                                        <h6 class="text-gray-900">End Date:</h6>
+                                        <p
+                                            id="end-date"
+                                            class="text-gray-900"
+                                        ></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Page Heading -->
                         <div
                             class="d-sm-flex align-items-center justify-content-between mb-4"
                         >
-                            <h1 class="h3 mb-0 text-gray-800">
-                                Take Attendance
-                            </h1>
+                            <h1 class="h3 mb-0 text-gray-800">ATTENDANCE</h1>
                         </div>
 
                         <div class="card shadow mb-4">
                             <div class="card-body">
-                                <div class="table-responsive">
-                                    <table
-                                        class="table table-bordered"
-                                        id="dataTable"
-                                        width="100%"
-                                        cellspacing="0"
-                                    >
-                                        <thead>
-                                            <tr>
-                                                <th style="width: 100px">Id</th>
-                                                <th>Student Image</th>
-                                                <th>Student Name</th>
-                                                <th>Gender</th>
-                                                <th>Action</th>
-                                                <th>Note</th>
-                                            </tr>
-                                        </thead>
-                                    </table>
-                                </div>
+                                <form id="attendance-form">
+                                    <div class="table-responsive">
+                                        <table
+                                            class="table table-bordered"
+                                            id="dataTable"
+                                            width="100%"
+                                            cellspacing="0"
+                                        >
+                                            <thead>
+                                                <tr>
+                                                    <th style="width: 100px">
+                                                        Id
+                                                    </th>
+                                                    <th>Student Image</th>
+                                                    <th>Student Name</th>
+                                                    <th>Gender</th>
+                                                    <th>Action</th>
+                                                    <th>Note</th>
+                                                </tr>
+                                            </thead>
+                                        </table>
+                                    </div>
+
+                                    <div class="text-center">
+                                        <button
+                                            type="submit"
+                                            class="btn btn-primary"
+                                        >
+                                            Save
+                                        </button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
