--- a/Hana_FE/src/public/attendance/student-attendance.html
+++ b/Hana_FE/src/public/attendance/student-attendance.html
@@ -54,9 +54,9 @@
 
                     <!-- Begin Page Content -->
                     <div class="container-fluid">
-                        <!-- <div class="loading-div">
-							<img src="../../img/Rolling-1s-200px.gif" />
-						</div> -->
+                        <div class="loading-div">
+                            <img src="../../img/Rolling-1s-200px.gif" />
+                        </div>
                         <div class="card shadow mb-4">
                             <div class="card-body">
                                 <div class="card-header py-3 class-info-grid">
