update take attendance function

--- a/Hana_FE/src/public/attendance/take-attendance.html
+++ b/Hana_FE/src/public/attendance/take-attendance.html
@@ -94,8 +94,7 @@
 										<thead>
 											<tr>
 												<th style="width: 100px">Id</th>
-												<th>Class</th>
-												<th>Class Description</th>
+												<th>Slot</th>
 												<th>Action</th>
 											</tr>
 										</thead>
