--- a/Hana_FE/src/public/attendance/makeup-attendance.html
+++ b/Hana_FE/src/public/attendance/makeup-attendance.html
@@ -51,62 +51,43 @@
 
 					<!-- Begin Page Content -->
 					<div class="container-fluid">
-						<!-- <div class="loading-div">
-                            <img src="../../img/Rolling-1s-200px.gif" />
-                        </div> -->
+						<div class="loading-div">
+							<img src="../../img/Rolling-1s-200px.gif" />
+						</div>
 						<!-- Page Heading -->
 						<div
 							class="d-sm-flex align-items-center justify-content-between mb-4"
 						>
-							<h1 class="h3 mb-0 text-gray-800">ATTENDANCE REPORT</h1>
+							<h1 class="h3 mb-0 text-gray-800">MAKE UP ATTENDANCE</h1>
 						</div>
 
 						<div class="card shadow mb-4">
 							<div class="card-body">
-								<div class="dropdown mb-4">
-									<button
-										class="btn btn-primary dropdown-toggle"
-										type="button"
-										id="yearDropdown"
-										data-toggle="dropdown"
-										aria-haspopup="true"
-										aria-expanded="false"
-									>
-										Year
-									</button>
-									<div
-										class="dropdown-menu animated--fade-in"
-										aria-labelledby="yearDropdown"
-										id="yearOptions"
-									></div>
-								</div>
-								<div class="table-responsive">
-									<table
-										class="table table-bordered"
-										id="dataTable"
-										width="100%"
-										cellspacing="0"
-									>
-										<thead>
-											<tr>
-												<th style="width: 100px">Id</th>
-												<th>Student Name</th>
-												<th>January</th>
-												<th>February</th>
-												<th>March</th>
-												<th>April</th>
-												<th>May</th>
-												<th>June</th>
-												<th>July</th>
-												<th>August</th>
-												<th>September</th>
-												<th>October</th>
-												<th>November</th>
-												<th>December</th>
-											</tr>
-										</thead>
-									</table>
-								</div>
+								<form id="attendance-form">
+									<div class="table-responsive">
+										<table
+											class="table table-bordered"
+											id="dataTable"
+											width="100%"
+											cellspacing="0"
+										>
+											<thead>
+												<tr>
+													<th style="width: 100px">Id</th>
+													<th>Student Image</th>
+													<th>Student Name</th>
+													<th>Gender</th>
+													<th>Action</th>
+													<th>Note</th>
+												</tr>
+											</thead>
+										</table>
+									</div>
+
+									<div class="text-center">
+										<button type="submit" class="btn btn-primary">Save</button>
+									</div>
+								</form>
 							</div>
 						</div>
 					</div>
@@ -148,6 +129,6 @@
 		<script src="../../js/components/topbar.js"></script>
 		<script src="../../js/components/footer.js"></script>
 
-		<script src="../../js/attendance/attendance-report.js"></script>
+		<script src="../../js/attendance/makeup-attendance.js"></script>
 	</body>
 </html>
